--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
          	<a href="#five"  onclick="coldAdd();" class="w3-btn w3-black">No</a> <!--button to next page; adds 1 to cold count-->
 	</div>
 </div>
+	
+<div class="page" id="five">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Results</h1> <!-- page title -->
+	</div>
+	
+	<div id="content" class="w3-container">
+		<p id="results"></p>
+	</div>
+</div>
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
