--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         function coldAdd(){
             cold_count = cold_count + 1;
         }
+	
+	function resultspercentage(){
+		var resultText = document.getElementById("results");
+		var coldpercentage = (cold_count/4)*100
+		var allergypercentage = (allergy_count/4)*100
+		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; 
 
   </script>
 
@@ -145,6 +151,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p id="results"></p>
+		<a href="#five"  onclick="resultspercentage();" class="w3-btn w3-black"> Results</a> <!--button to view results-->
 	</div>
 </div>
 
