removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p id="results"></p>
-		<a href="#five"  onclick="resultspercentage();" class="w3-btn w3-black"> Results</a> <!--button to view results-->
+		<a onclick="resultspercentage();" class="w3-btn w3-black"> Results</a> <!--button to view results-->
 	</div>
 </div>
 
