--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p id="results"></p>
 		<a onclick="resultspercentage();" class="w3-btn w3-black"> results</a> <!--button to view results-->
+		<p id="results"></p> <!--indicates where results will be displayed-->
 	</div>
 </div>
 
