--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	function resultspercentage(){
 		var resultText = document.getElementById("results");
-		var coldpercentage = (cold_count/4)*100
-		var allergypercentage = (allergy_count/4)*100
+		var coldpercentage = (cold_count/4)*100;
+		var allergypercentage = (allergy_count/4)*100;
 		resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "%" "<br> Probability it is a cold =" + coldPercent + "%"; 
 
   </script>
