--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<a onclick="resultspercentage();" class="w3-btn w3-black">results</a> <!--button to view results-->
+		<a onclick="resultspercentage();" class="w3-btn w3-black">Results</a> <!--button to view results-->
 		<p id="results"></p> <!--indicates where results will be displayed-->
 	</div>
 </div>
