restored earlier version

--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-	<a onclick="resultspercentage();" class="w3-btn w3-black">Results</a> <!--button to view results-->
-		<p id="results"></p> <!--indicates where results will be displayed-->
+		<a onclick="resultspercentage();" class="w3-btn w3-black">Results</a> <!--button to view results-->
+		<p id="Results"></p> <!--indicates where results will be displayed-->
+	</div>
 </div>
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
