restored “capitalized ‘Results (button)’” version

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		var resultText = document.getElementById("results");
 		var coldpercentage = (cold_count/4)*100;
 		var allergypercentage = (allergy_count/4)*100;
-		resultText.innerHTML = "Probability it is allergies =" + allergypercentage + "%" + "<br> Probability it is a cold =" + coldpercentage + "%";  
+		resultText.innerHTML = "Probability it is allergies =" + allergypercentage + "%" + "<br> Probability it is a cold =" + coldpercentage + "%"; 
 	}
   </script>
 
@@ -150,7 +150,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<a onclick="resultspercentage();" class="w3-btn w3-black">Results</a> <!--button to view results-->
-		<p id="Results"></p> <!--indicates where results will be displayed-->
+		<p id="results"></p> <!--indicates where results will be displayed-->
 	</div>
 </div>
 
@@ -160,3 +160,4 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 </body>
 </html>
+	
