--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 
         function allergyAdd(){ //"allergyAdd" function declaration
-            allergy_count = allergy_count + 1; //code that is executed
+            allergy_count = allergy_count + 1; //code that is executed (+1 to allergy count)
 
         }
 
         function coldAdd(){ //"coldAdd" function declaration
-            cold_count = cold_count + 1; //code that is executed
+            cold_count = cold_count + 1; //code that is executed (+1 to cold count)
         }
 	
 	function resultspercentage(){ //"resultspercentage" function declaration
